--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
     "@angular/router": "~18.0.0",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/typeorm": "^10.0.2",
     "@nx/angular": "19.3.1",
     "axios": "^1.6.0",
+    "pg": "^8.12.0",
+    "postgres": "^3.4.4",
     "primeng": "^17.18.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "typeorm": "^0.3.20",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
